@@ -234,6 +234,7 @@ struct	return STRUCT;
 int		return UCC_INT;
 char	return UCC_CHAR;
 byte	return UCC_CHAR;
+long	return UCC_LONG;
 const		return UCC_CONST;
 string		return STRING;
 enum		return ENUM;
